app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */


 @import "bootstrap";
 @import 'font-awesome-sprockets';
 @import 'font-awesome';

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'M PLUS Rounded 1c', sans-serif;
}

html, body, main {
 height: 100%;
 width: 100%;
}

.top {
 height: 100%;
}

.sidebar_fixed {
 padding: 0px;
}

.sidebar{
  top: 0px;
  background: #EBCFDF;
  padding: 40px;
  height: 100%;
}

.d-flex {
 flex-wrap: wrap;
}

.nav-item {
 margin: 0px 10px;
}

//　レビューイメージの画像比率保護

.reviewimage {
  width: auto;
  height: 350px;
}

//　サイドバーのCSS

.mainInner{
 display: table;
 height: 100%;
 width: 100%;
 text-align: center;
}

.mainInner div{
 display:table-cell;
 vertical-align: middle;
 font-size: 3em;
 font-weight: bold;
 letter-spacing: 1.25px;
}

#sidebarMenu {
 height: 100%;
 position: fixed;
 left: 0;
 width: 250px;
 padding-top: 60px;
 transform: translateX(-250px);
 transition: transform 250ms ease-in-out;
 background: linear-gradient(180deg, #FB6376 0%, #EBCFDF 100%);
}

.sidebarMenuInner{
 margin:0;
 padding:0;
 border-top: 1px solid rgba(255, 255, 255, 0.10);
}
.sidebarMenuInner li{
 list-style: none;
 color: #fff;
 text-transform: uppercase;
 font-weight: bold;
 padding: 20px;
 cursor: pointer;
 border-bottom: 1px solid rgba(255, 255, 255, 0.10);
}
.sidebarMenuInner li span{
 display: block;
 font-size: 14px;
 color: rgba(255, 255, 255, 0.50);
}
.sidebarMenuInner li a{
 color: #fff;
 text-transform: uppercase;
 font-weight: bold;
 cursor: pointer;
 text-decoration: none;
 display: block;
}
input[type="checkbox"]:checked ~ #sidebarMenu {
 transform: translateX(0);
}

#openSidebarMenu {
 display: none;
}

input[type=checkbox] {
 transition: all 0.3s;
 box-sizing: border-box;
}
.sidebarIconToggle {
 transition: all 0.3s;
 box-sizing: border-box;
 cursor: pointer;
 position: absolute;
 z-index: 99;
 height: 100%;
 width: 100%;
 top: 22px;
 left: 15px;
 height: 22px;
 width: 22px;
}
.spinner {
 transition: all 0.3s;
 box-sizing: border-box;
 position: absolute;
 height: 3px;
 width: 100%;
 background-color: #fff;
}
.horizontal {
 background-color: #d1bac8;
 transition: all 0.3s;
 box-sizing: border-box;
 position: relative;
 float: left;
 margin-top: 3px;
}
.diagonal.part-1 {
 background-color: #FB6376;
 position: relative;
 transition: all 0.3s;
 box-sizing: border-box;
 float: left;
}
.diagonal.part-2 {
 background-color: #fcdcf7;
 transition: all 0.3s;
 box-sizing: border-box;
 position: relative;
 float: left;
 margin-top: 3px;
}
input[type=checkbox]:checked ~ .sidebarIconToggle > .horizontal {
 transition: all 0.3s;
 box-sizing: border-box;
 opacity: 0;
}
input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-1 {
 transition: all 0.3s;
 box-sizing: border-box;
 transform: rotate(135deg);
 margin-top: 8px;
}
input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
 transition: all 0.3s;
 box-sizing: border-box;
 transform: rotate(-135deg);
 margin-top: -9px;
}

@media (max-width: 575.98px) {
 
 
 main {
  padding-bottom: 45px;
 }

 footer {
  width: 100%;
  height: 40px;
  background-color: #EACFDF;
  position: fixed;
  bottom: 0px;
  left: 0px;
 }
}

@media (min-width: 576px) and (max-width: 767.98px) {
	.my-class {
		// cssプロパティをここに記述
	}
}

@media (min-width: 768px) and (max-width: 991.98px) {
	.my-class {
		// cssプロパティをここに記述
	}
}

@media (min-width: 992px) and (max-width: 1199.98px) {
	.footer {
		 display: none;
	}
}

@media (min-width: 1200px) {
	.my-class {
		// cssプロパティをここに記述
	}
}

